# LAB1_WS

./: .gitignore  README.md  mpc_analysis.sh  mpc_parameter_sweep.sh  usage_examples.md
images/1.1/: Rviz-Plot_Compare
src/: Pure-persuit_test.py  Pure_persuit_test.ipynb
src/limo_bringup/: CMakeLists.txt  package.xml
src/limo_bringup/launch/: empty_world.launch.py  limo_bringup_1.1.launch.py  limo_bringup_1.2.launch.py  limo_bringup_1.2_pid.launch.py  limo_bringup_1.2_pure_pursuit.launch.py  limo_bringup_1.2_stanley.launch.py  limo_bringup_1.3.launch.py
src/limo_bringup/launch/classic/: limo_bringup_1.1.launch.py  limo_bringup_1.2.launch.py  limo_bringup_1.2_pid.launch.py  limo_bringup_1.2_pure_pursuit.launch.py  limo_bringup_1.2_stanley.launch.py  limo_bringup_1.3.launch.py
src/limo_bringup/launch/ign/: limo_bringup_ign_manual.launch.py  limo_bringup_ign_mpc.launch.py  limo_bringup_ign_stanley.launch.py
src/limo_bringup/scripts/: dummy_script.py
src/limo_bringup/src/: cpp_node.cpp
src/limo_controller/: CMakeLists.txt  package.xml
src/limo_controller/config/: mpc_sweep_config.yaml
src/limo_controller/launch/: limo_kinematics.launch.py  mpc_parameter_sweep.launch.py  mpc_single_evaluation.launch.py
src/limo_controller/limo_controller/: mpc_lib.py
src/limo_controller/scripts/: comparative_analyzer.py  consolidate_advanced.py  dummy_script.py  ekf.py  forward_kinematics.py  gps_emulator.py  inverse_kinematics.py  mpc.py  mpc_4states.py  mpc_evaluator.py  mpc_lib.py  parameter_sweep.py  path_tracking_measurement.py  pid.py  pid_gps.py  pure_pursuit.py  pure_pursuit_gps.py  run_mpc_sweep.py  stanley.py
src/limo_controller/src/: cpp_node.cpp
src/limo_description/: CMakeLists.txt  package.xml
src/limo_description/config/: limo_bridge.yaml  limo_controller.yaml
src/limo_description/launch/: construct_ekf.launch.py  construct_kinematics.launch.py  construct_path.launch.py  limo_ackerman_gz.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py
src/limo_description/launch/classic/: construct_kinematics.launch.py  display_models_acker.launch.py  gazebo_models_acker.launch.py
src/limo_description/launch/ign/: limo_ackerman_gz_path.launch.py
src/limo_description/models/limo_ackerman/: model.config  model.sdf  model_old.sdf
src/limo_description/rviz/: ign_path.rviz  lab1.rviz  lab2.rviz  lab3.rviz
src/limo_description/urdf/: limo_ackerman.gazebo  limo_ackerman.xacro  limo_ackerman_clean.sdf  limo_ackerman_clean.urdf  limo_ackerman_gz.xacro  limo_gazebo.gazebo
src/limo_description/urdf/classic/: limo_ackerman.gazebo  limo_ackerman.xacro  limo_gazebo.gazebo  limo_xacro.xacro
src/limo_description/urdf/ign/: limo_ackerman.xacro  limo_ackerman_gz.xacro
src/limo_description/worlds/: basic.world  basic2.world  basic_gz.world
src/limo_results/: CMakeLists.txt  package.xml
src/limo_results/scripts/: dummy_script.py  limo_path.py  limo_path_circle.py  limo_path_square.py  limo_path_wave.py  limo_plot.py  limo_plot_ekf.py  limo_plot_gps.py
src/limo_results/src/: cpp_node.cpp
src/rqt_robot_steering/src/rqt_robot_steering/: robot_steering.py
